--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- CsS Style -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" text="text/css" href="style.css">
   <title>BMI Calculator</title>
 </head>
 <body>
